# lineage

./: CMakeLists.txt  README.md
include/lineage/: character.h  cli.h  inventory.h  linrandom.h  trait.h
src/: character.cpp  linrandom.cpp  main.cpp  trait.cpp
src/lineage/: character.cpp  cli.cpp  inventory.cpp  linrandom.cpp  main.cpp  trait.cpp
